--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,6 +178,7 @@ nav:
         - Future: ef/ef-future.md
       - DevDao: devdao.md
       - Sigmanauts: contribute/sigmanauts.md
+      - Partnerships: partners.md
     - Events:
       - Events: events/events-overview.md
       - ERGOHACK: events/ergohack.md
