--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ concurrency:
   group: docs-ci-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
   build:
     name: Build documentation
@@ -37,6 +40,28 @@ jobs:
         with:
           name: mkdocs-site
           path: site
+
+      - name: Upload GitHub Pages artifact
+        if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: site
+
+  deploy-preview:
+    name: Deploy preview to GitHub Pages
+    needs: build
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+    steps:
+      - name: Deploy preview
+        uses: actions/deploy-pages@v4
+        with:
+          preview: true
 
   deploy-production:
     name: Deploy to production server
