--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,13 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+          cache-dependency-path: requirements.txt
 
       - name: Install dependencies
         run: pip install -r requirements.txt
 
       - name: Build MkDocs site
-        run: mkdocs build
+        run: mkdocs build --strict
 
       - name: Upload MkDocs artifact
         uses: actions/upload-artifact@v4
@@ -93,11 +94,15 @@ jobs:
             git reset --hard "${GITHUB_SHA}" || { echo "❌ Git reset failed"; exit 1; }
             git clean -fd
 
-            echo "🧰 Ensuring python3-venv is available..."
-            apt-get update -y && apt-get install -y python3-venv
+            if ! dpkg -s python3-venv >/dev/null 2>&1; then
+              echo "🧰 Installing python3-venv..."
+              apt-get update -y && apt-get install -y python3-venv
+            fi
 
             echo "🐍 Setting up virtual environment..."
-            python3 -m venv .venv
+            if [ ! -d .venv ]; then
+              python3 -m venv .venv
+            fi
             source .venv/bin/activate
 
             echo "📦 Installing dependencies..."
@@ -108,7 +113,7 @@ jobs:
             rm -rf site || echo "⚠️ Failed to remove site dir"
 
             echo "🏗 Building MkDocs site..."
-            mkdocs build || { echo "❌ MkDocs build failed"; exit 1; }
+            mkdocs build --strict || { echo "❌ MkDocs build failed"; exit 1; }
 
             echo "🪪 Writing deploy metadata..."
             echo "${GITHUB_SHA}" > site/deploy-sha.txt
