--- a/requirements.txt
+++ b/requirements.txt
@@ -109,3 +109,7 @@ validators==0.34.0
 watchdog==6.0.0
 wcwidth==0.2.13
 webencodings==0.5.1
+
+mkdocs-breadcrumbs-plugin>=0.2
+mkdocs-pagetree-plugin>=0.3
+mkdocs-redirects>=1.2
