Revert "Merge pull request #72 from ergoplatform/codex/update-mkdocs-configuration-and-structure-mahrv1"
This reverts commit 7bff49ac60b44dc1992531c906d4b1d59f4c47a0, reversing
changes made to 697999056c4cef3f8c312b7918acc050aac8102b.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Build MkDocs site
-        run: mkdocs build # --strict
+        run: mkdocs build --strict
 
       - name: Configure GitHub Pages
         if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
@@ -121,7 +121,7 @@ jobs:
             rm -rf site || echo "⚠️ Failed to remove site dir"
 
             echo "🏗 Building MkDocs site..."
-            mkdocs build || { echo "❌ MkDocs build failed"; exit 1; }
+            mkdocs build --strict || { echo "❌ MkDocs build failed"; exit 1; }
 
             echo "🪪 Writing deploy metadata..."
             echo "${GITHUB_SHA}" > site/deploy-sha.txt
