section index fix

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,7 +70,7 @@ plugins:
       allow_arbitrary_locations: true
   - neoteroi.mkdocsoad
   #- mkdocs-jupyter #https://github.com/danielfrg/mkdocs-jupyter
-  - section-index #https://github.com/oprypin/mkdocs-section-index
+  #- section-index #https://github.com/oprypin/mkdocs-section-index
   # - section-index #https://github.com/oprypin/mkdocs-section-index
   #- awesome-nav #https://github.com/lukasgeiter/mkdocs-awesome-pages-plugin
   - autolinks
